fixed text overflow on todo items

--- a/src/components/TodoItem/todoItem.css
+++ b/src/components/TodoItem/todoItem.css
@@ -18,6 +18,8 @@
 
 .todoName {
   padding: 12px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .todoIconsContainer {
@@ -32,5 +34,8 @@
 @media (max-width: 768px) {
   .todoContainer {
     width: 90%;
+  }
+  .todoName {
+    font-size: 0.9em;
   }
 }
